--- a/testp/templates/chart2.html
+++ b/testp/templates/chart2.html
@@ -9,6 +9,7 @@
     
     <body>
         <button id="btn">Click to refresh</button>
+        <div id="response"></div>
         <div id="chart"></div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
